Dark mode now has light cursor CodeMirror-hints width to 450, small css fix for odd hints New Praegus credit

--- a/fitnesse/resources/bootstrap-plus/css/codemirror/theme/darcula.css
+++ b/fitnesse/resources/bootstrap-plus/css/codemirror/theme/darcula.css
@@ -14,7 +14,7 @@
 .cm-s-darcula .cm-variable-2 {color: #05a;}
 .cm-s-darcula .cm-variable-3, .cm-s-default .cm-type {color: #999;}
 .cm-s-darcula .cm-comment {color: #6dab63;}
-.cm-s-darcula .cm-string {color: #a11;}
+.cm-s-darcula .cm-string {color: #dedda2;}
 .cm-s-darcula .cm-string-2 {color: #f50;}
 .cm-s-darcula .cm-meta {color: #555;}
 .cm-s-darcula .cm-qualifier {color: #555;}
@@ -30,7 +30,7 @@
 .cm-s-darcula.CodeMirror { background: #2B2B2B; color: #A9B7C6; }
 
 
-.cm-s-darcula .CodeMirror-cursor { border-left: 1px solid #dddddd; }
+.cm-s-darcula .CodeMirror-cursor { border-left: 1px solid #dddddd !important; }
 .cm-s-darcula .CodeMirror-activeline-background { background: #3A3A3A; }
 .cm-s-darcula div.CodeMirror-selected { background: #085a9c; }
 .cm-s-darcula .CodeMirror-gutters { background: rgb(72, 72, 72); border-right: 1px solid grey; color: #606366 }
@@ -49,3 +49,4 @@
   background-color: #494d4e !important;
   color: #9c9e9e !important;
 }
+
