--- a/fitnesse/resources/bootstrap-plus/less/dark/fitnesse-bootstrap.less
+++ b/fitnesse/resources/bootstrap-plus/less/dark/fitnesse-bootstrap.less
@@ -14,7 +14,7 @@
 
 // Default variable overrides
 @navbar-margin-bottom: 0;
-@font-family-sans-serif:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+@font-family-sans-serif:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
 @text-color:#EEE;
 @btn-default-border:#AAA;
 @btn-primary-border: #CCC;
